--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": ""
   },
   "devDependencies": {
+    "dojo": "^1.9.9",
     "dts-generator": "1.4.1",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
@@ -19,6 +20,7 @@
     "grunt-text-replace": "0.4.0",
     "grunt-ts": "3.0.0",
     "grunt-tslint": "2.0.0",
+    "intern": "^3.2.3",
     "tslint": "^2.4.2",
     "typescript": "~1.5"
   }
