update examples to typescript 1.8, grunt-dojo2, typings typings, updated tslint

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-.sublimets
-.tscache
-.idea
-*.iml
 *.js
 *.js.map
 !/*.js
-dist
-_build
-node_modules
-bower_components
-tests/typings/dist/
+!/tasks/*.js
+/_build
+/bower_components
+/dist
+/html-report
+/node_modules
+/typings
 .baseDir.ts
-html-report
+.tscache
+coverage-unmapped.json
+npm-debug.log
