--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,8 @@
-\# http://editorconfig.org
+# http://editorconfig.org
 root = true
 
 [*]
-indent_style = space
+indent_style = tab
 indent_size = 4
 end_of_line = lf
 charset = utf-8
