--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,8 @@
-\# Set the default behavior, in case users don't have core.autocrlf set
+# Set the default behavior, in case users don't have core.autocrlf set
 * text=auto
 
-\# Files that should always be normalized and converted to native line
-\# endings on checkout.
+# Files that should always be normalized and converted to native line
+# endings on checkout.
 *.js text
 *.json text
 *.ts text
@@ -10,7 +10,7 @@
 *.yml text
 LICENSE text
 
-\# Files that are truly binary and should not be modified
+# Files that are truly binary and should not be modified
 *.png binary
 *.jpg binary
 *.jpeg binary
